# pace3

./: .env  .gitignore  .pre-commit-config.yaml  .talismanrc  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  run  run.sh
backend/: .env  .gitignore  .talismanrc  Cargo.toml  Dockerfile  Dockerfile.migration  clippy.toml  docker-compose.yml  nginx-local.conf  run
backend/migrations/2022-09-02-083847_create_runners/: up.sql
backend/migrations/2022-09-06-084138_create_start_number_sequence/: down.sql
backend/migrations/2022-09-07-202332_create_event_info/: up.sql
backend/migrations/2022-10-18-150305_add_status_link/: down.sql  up.sql
backend/migrations/2022-10-19-190050_add_delivery_status/: down.sql  up.sql
backend/migrations/2022-10-19-add_payment_status/: down.sql  up.sql
backend/migrations/2022-10-20-124112_add_verification_code_to_runners_table/: down.sql  up.sql
backend/migrations/2022-11-28-114321_payment_confirmation_mail_sent/: down.sql  up.sql
backend/migrations/2022-12-09-150014_add_tshirt_payment_field/: down.sql  up.sql
backend/migrations/2023-02-03-134233_add_table_rejected_transactions/: down.sql  up.sql
backend/migrations/2023-04-04-134926_add_theme_table/: down.sql  up.sql
backend/migrations/2023-04-14-133054_insert_settings_into_theme/: down.sql  up.sql
backend/migrations/2023-04-17-073101_add_unique_constraint_to_username_in_users/: down.sql  up.sql
backend/migrations/2023-04-24-151122_add_bsv_participant_column_to_runners/: down.sql  up.sql
backend/migrations/2023-04-25-085515_add_entry_added_at_to_rejected_transactions/: down.sql  up.sql
backend/migrations/2023-06-05-185151_add_decentral_signup_settings/: down.sql  up.sql
backend/src/: app_config.rs  builders.rs  constants.rs  lib.rs  schema.rs  validation.rs
backend/src/core/repository/: mod.rs  payment.rs  runner.rs  theme.rs  user.rs
backend/src/core/service/: email.rs  mod.rs  payment.rs  runner.rs  theme.rs  user.rs
backend/src/dao/: users.rs
backend/src/handlers/: admin.rs  email.rs  error.rs  health.rs  imprint.rs  join.rs  mod.rs  privacy_notice.rs  runner.rs  runners.rs  summary.rs  theme.rs
backend/src/models/: donation.rs  info.rs  mod.rs  payment.rs  rejected_transaction.rs  runner.rs  shipping.rs  start_number.rs  theme.rs  users.rs
backend/src/repository/: mod.rs  payment.rs  runner.rs  theme.rs  user.rs
backend/src/services/: email.rs
backend/templates/: imprint.html  index.html  join.html  payment_confirmation_mail.html  privacy_notice.html  registration_mail.html  summary.html
backend/templates/includes/: base.html  countrydropdown.js
backend/tests/: admin.rs  email.rs  helpers.rs  lib.rs  runners.rs  start_number.rs  theme.rs
backend/tests/_pdf_generation_spike/: pdf.rs
backend/tests/repository/: mod.rs  payment.rs  runner.rs  user.rs
cypress/: cypress.config.js  package-lock.json  package.json
db-init/: init-user-db.sql
infra-setup/: deployment.yaml  ingress.yaml  service.yaml
src/: app_config.rs  builders.rs  constants.rs  converters.rs  lib.rs  main.rs  schema.rs
(+150 files in other folders)
