[package]
name = "pace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-prom = "0.6.0"
actix-files = "0.6.2"
actix-rt = "2.7.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.140", features = ["derive"] }
tera = { version = "1", default-features = false }