[package]
name = "pace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-prom = "0.6.0"
actix-files = "0.6.2"
actix-rt = "2.7.0"
actix-cors = "0.6.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tera = { version = "1", default-features = false }
diesel = { version = "2.0.0-rc.0", features = ["postgres"] }
dotenvy = "0.15"
rust-argon2 = "1.0"
