[package]
name = "pace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-web-prom = "0.6.0"
actix-files = "0.6.2"
actix-rt = "2.7.0"
actix-cors = "0.6.3"
actix-identity = "0.5.2"
actix-session = { version = "0.7", features = ["cookie-session"]}
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.85"
tera = { version = "1", default-features = false }
diesel = { version = "2.0.0-rc.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
rust-argon2 = "1.0"
rand = "0.8.5"
lettre = "0.10.1"
strum = "0.24.1"
strum_macros = "0.24.1"
futures-util = "0.3.25"
csv = "1.1.6"
chrono = "0.4.23"
r2d2 = "0.8.10"
mockall = "0.11.4"
mockall_double = "0.3.0"